# wifirt-com

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
build_support/: cmake_build.rs  compile_commands.rs  link.rs  mod.rs
docs/: IFCONFIG.md  INJECT.md
examples/: inject_demo.rs  list_iface.rs  minimal.rs
kenel-ext/: NotImpled
pcap-core/: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
pcap-core/cmake/: Dependencies.cmake  Install.cmake  Options.cmake  Targets.cmake  Toolchain.cmake
pcap-core/include/: pcap_capture.h  pcap_handle.h  pcap_inject.h  print_hello.h  start_demo.h
pcap-core/src/: pcap_capture.c  pcap_handle.c  pcap_inject.c  print_hello.c  start_demo.c
pcap-core/toolchain/: aarch64-linux-gnu.cmake
src/: capture.rs  channel.rs  decode.rs  ffi.rs  inject.rs  lib.rs  main.rs  pcap.rs  protocol.rs  radiotap.rs  utils.rs
src/utils/: channel.rs  if_helper.rs
src/utils/if_helper/: command.rs  common.rs  error.rs  hardware.rs  wireless.rs
