[package]
name = "wifirt-com"
version = "0.1.0"
edition = "2024"

[build-dependencies]
cmake = "^0.1"

[lib]
name = "wifirt"

[[example]]
name = "minimal"

[[example]]
name = "inject_demo"

[[example]]
name = "list_iface"

[dependencies]
ieee80211 = "0.5.9"
nom = "7.1.3"
thiserror = "1.0.69"
tokio = { version = "1.49.0", features = ["full"] }
# libc = "0.2.180"

[dev-dependencies]
tempfile = "3.14.0"
